Fixed the display bug on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -110,11 +110,27 @@ h1 {
 
 .container-grey-section {
     width: 100%;
-
+    /*height: 100%;*/
     background: #eee;
 }
 
 .container-white-section {
     width: 100%;
+    /*height: 100%;*/
     background: #fff;
+}
+
+@media(min-width:1200px){
+    .container-grey-section {
+        width: 100%;
+        height: 100%;
+        background: #eee;
+    }
+
+    .container-white-section {
+        width: 100%;
+        height: 100%;
+        background: #fff;
+    }
+
 }
